<resources>
    <string name="app_name">Legado</string>
    <string name="app_name_a">LegadoA</string>
    <string name="app_name_debug" translatable="false">阅读D</string>
    <string name="receiving_shared_label">Legado·search</string>
    <string name="tip_perm_request_storage">Legado needs storage access to find and read books. please go "App Settings" to allow "Storage permission".</string>
    <string name="menu_backup">Home</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_import_old">Import Legado data</string>
    <string name="webdav_cache_backup">Offline cache book backup</string>
    <string name="webdav_cache_backup_s">Export to local and back up to the exports directory under the legado folder</string>
    <string name="backup_path">Backup to</string>
    <string name="select_backup_path">Please select a backup path.</string>
    <string name="menu_import_old_version">Import legacy data</string>
    <string name="menu_import_github">Import github data</string>
    <string name="menu_replace_rule">Replacement</string>
    <string name="menu_send">Send</string>
    <string name="dialog_title">Prompt</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_setting">Go to Settings</string>
    <string name="tip_cannot_jump_setting_page">Cannot jump to Settings.</string>
    <string name="manual_input">Manual Input</string>
    <string name="enter_directory_path">Enter directory path</string>
    <string name="invalid_directory">Invalid directory path</string>
    <string name="empty_directory_input">Directory path cannot be empty</string>
    <string name="dynamic_click_retry">Retry</string>
    <string name="dynamic_loading">Loading</string>
    <string name="draw">Warning</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_select_group">Delete Select Group</string>
    <string name="delete_all">Delete all</string>
    <string name="custom_export_section">Custom export chapter of epub</string>
    <string name="replace">Replace</string>
    <string name="replace_purify">Replacement</string>
    <string name="replace_purify_desc">Configure replacement rules</string>
    <string name="not_available">Not available now</string>
    <string name="enable">Enable</string>
    <string name="replace_purify_search">Search Replacement</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="favorites">Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="in_favorites">in Favorites</string>
    <string name="out_favorites">Not in Favorites</string>
    <string name="rss">RSS feeds</string>
    <string name="all">All</string>
    <string name="recent_reading">Recent reading</string>
    <string name="last_read">Last reading</string>
    <string name="update_log">What\'s new</string>
    <string name="bookshelf_empty">The bookshelf is still empty. Search for books or add them from discovery!</string>
    <string name="action_search">Search</string>
    <string name="action_download">Download</string>
    <string name="all_versions">All Versions</string>
    <string name="layout_list">List</string>
    <string name="layout_grid2">Grid-2</string>
    <string name="layout_grid3">Grid-3</string>
    <string name="layout_grid4">Grid-4</string>
    <string name="layout_grid5">Grid-5</string>
    <string name="layout_grid6">Grid-6</string>
    <string name="bookshelf_layout">Layout</string>
    <string name="view">View</string>
    <string name="book_library">Library</string>
    <string name="book_local">Import books</string>
    <string name="book_source">Book sources</string>
    <string name="book_source_manage">Sources management</string>
    <string name="book_source_manage_desc">Create/Import/Edit/Manage Book sources</string>
    <string name="setting">Settings</string>
    <string name="theme_setting">Theme settings</string>
    <string name="theme_setting_s">Some settings related to interface or color</string>
    <string name="other_setting">Other settings</string>
    <string name="other_setting_s">Some function-related settings</string>
    <string name="precise_manage">Precise Management</string>
    <string name="precise_manage_summary">More precise management</string>
    <string name="about">About</string>
    <string name="donate">Donations</string>
    <string name="exit">Exit</string>
    <string name="exit_no_save">It has not been saved. Do you want to continue editing?</string>
    <string name="save_ing">Saving, please wait…</string>
    <string name="read_style">Book styles</string>
    <string name="version">Version</string>
    <string name="local">Local</string>
    <string name="search">Search</string>
    <string name="query">Query</string>
    <string name="no_explore_kind">No explore kinds found</string>
    <string name="origin_format">Origin: %s</string>
    <string name="read_dur_progress">Origin: %s</string>
    <string name="book_name">Title</string>
    <string name="lasted_show">Latest: %s</string>
    <string name="check_add_bookshelf">Would you like to add %s to your Bookshelf?</string>
    <string name="import_books_count">%s text file(s) in total</string>
    <string name="is_loading">Loading…</string>
    <string name="retry">Retry</string>
    <string name="web_service">Web service</string>
    <string name="web_service_desc">Web edit source and read book</string>
    <string name="web_service_auth_title">Web Service Auth</string>
    <string name="web_service_auth_summary">Require token for API access. Recommended to enable on public networks</string>
    <string name="web_service_token_title">Web Service Token</string>
    <string name="web_service_token_summary">Set the token for web service authentication</string>
    <string name="local_network_permission_rationale">Android 17 and above restricts local network access; grant the nearby devices permission so other devices can connect to the Web service</string>
    <string name="local_network_permission_denied">Local network permission denied, Web service stopped</string>
    <string name="web_edit_source">Edit book sources on the web</string>
    <string name="offline_cache">Offline cache</string>
    <string name="offline_cache_t">Offline cache</string>
    <string name="offline_cache_s">cache the selected chapter(s) to Storage</string>
    <string name="change_origin">Change Origin</string>
    <string name="migrate_book_origin_done">Book source URL changed. Associated books have been migrated to the new URL.</string>
    <string name="about_description">
        \u3000\u3000 This is an open source reading software newly developed by Kotlin, welcome to join us.
    </string>
    <string name="app_share_description">
        Legado (YueDu 3.0) download link：\n https://github.com/gedoor/legado/releases
    </string>
    <string name="version_name">Version %s</string>
    <string name="pt_background_verification">Background-verification</string>
    <string name="ps_background_verification">you can operate freely when verifying the book source</string>
    <string name="pt_auto_refresh">Auto-refresh</string>
    <string name="ps_auto_refresh">Update books automatically when opening the software</string>
    <string name="pt_auto_download">Auto-download</string>
    <string name="ps_auto_download">Download the latest chapters automatically  when updating books</string>
    <string name="backup_restore">Backup and restore</string>
    <string name="web_dav_set">WebDav settings</string>
    <string name="web_dav_set_import_old">WebDav settings/Import legacy data</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backup_permission">Backup needs storage permission</string>
    <string name="restore_permission">Restore needs storage permission</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="backup_confirmation">Backup confirmation</string>
    <string name="backup_message">The new backup files will replace the original.\n Backup folder: YueDu</string>
    <string name="restore_confirmation">Restore confirmation</string>
    <string name="restore_message">Restoring the bookshelf data will overwrite the current Bookshelf.</string>
    <string name="backup_success">Backup succeed</string>
    <string name="add">Add</string>
    <string name="bookmark">Bookmarks</string>
    <string name="txt_toc_rule">Txt Catalog Rule</string>
    <string name="theme_mode">Theme mode</string>
    <string name="theme_mode_desc">Select a theme you want</string>
    <string name="restore_default">Restore default</string>
    <string name="search_help">Search Help</string>
    <string name="group_manage">Group management</string>
    <string name="text_menu_config">Expand Text Menu Config</string>
    <string name="text_menu_config_desc">Select the menu items you want to display. In collapsed mode, items beyond the direct display count will be shown in the overflow menu</string>
    <string name="reset_to_default">Reset to Default</string>
    <string name="other">Other</string>
    <string name="read_record">Read record</string>
    <string name="read_record_summary">Read record summary</string>
    <string name="storage_manage">Storage Management</string>
    <string name="storage_manage_summary">Manage app cache and storage</string>
    <string name="download_manage">Download Management</string>
    <string name="download_manage_summary">Manage WebView downloaded files</string>
    <string name="close">Close</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="edit_content">Edit Content</string>
    <string name="all_bookmark">All bookmarks</string>
    <string name="dict_rule">Dict rule</string>
    <string name="config_dict_rule">Config dict rule</string>
    <string name="config_txt_toc_rule">Configure txt catalog rules</string>
    <string name="file_manage">File management</string>
    <string name="file_manage_summary">Managing files in the application\'s private folder</string>
    <string name="manga_footer_config">Footer Config</string>
    <string name="manga_header_chapter">Hide Chapter and Label</string>
    <string name="manga_check_chapter_label">Chapter Label</string>
    <string name="manga_check_chapter">Chapter</string>
    <string name="manga_check_chapter_name">Chapter Name</string>
    <string name="manga_header_page">Hide Page and Label</string>
    <string name="manga_check_page_label">Page Label</string>
    <string name="manga_check_page_number">Page Number</string>
    <string name="manga_header_progress">Hide Progress and Label</string>
    <string name="manga_check_progress_label">Progress Label</string>
    <string name="manga_check_progress">Progress</string>
    <string name="manga_header_footer">Footer</string>
    <string name="manga_check_battery">Hide Battery Icon</string>
    <string name="manga_radio_left">Left</string>
    <string name="manga_radio_center">Center</string>
    <string name="menu_page">Page %d</string>
    <string name="add_all_to_shelf">Add All to Shelf</string>
    <string name="debug_tools">Debug Tools</string>
    <string name="debug_tools_desc">Encoding conversion, HTTP request, regex test and other debug tools</string>
    <string name="url_record">URL Access Record</string>
    <string name="record_url_switch">Enable URL Recording</string>
    <string name="select_rule">Select Rule</string>
    <string name="preset_rules">Preset Rules</string>
    <string name="import_rules">Import Rules</string>
    <string name="share_rules">Share Rules</string>
    <string name="export_rules">Export Rules</string>
    <string name="switch_layout">Switch Layout</string>
    <string name="explore_block_rule">Block Rules</string>
</resources>