<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:divider="@color/transparent"
    app:allowDividerBelow="false">

    <io.legado.app.lib.prefs.Preference
        android:icon="@drawable/ic_cfg_source"
        android:key="bookSourceManage"
        android:summary="@string/book_source_manage_desc"
        android:title="@string/book_source_manage"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:icon="@drawable/ic_cfg_source"
        android:key="txtTocRuleManage"
        android:summary="@string/config_txt_toc_rule"
        android:title="@string/txt_toc_rule"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:icon="@drawable/ic_cfg_replace"
        android:key="replaceManage"
        android:summary="@string/replace_purify_desc"
        android:title="@string/replace_purify"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:icon="@drawable/ic_translate"
        android:key="dictRuleManage"
        android:summary="@string/config_dict_rule"
        android:title="@string/dict_rule"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:icon="@drawable/ic_code"
        android:key="debugTools"
        android:summary="@string/debug_tools_desc"
        android:title="@string/debug_tools"
        app:iconSpaceReserved="false" />

    

    <io.legado.app.lib.prefs.NameListPreference
        android:defaultValue="0"
        android:entries="@array/theme_mode"
        android:entryValues="@array/theme_mode_v"
        android:icon="@drawable/ic_cfg_theme"
        android:key="themeMode"
        android:summary="@string/theme_mode_desc"
        android:title="@string/theme_mode"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_cfg_web"
        android:key="webService"
        android:summary="@string/web_service_desc"
        android:title="@string/web_service"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.PreferenceCategory
        android:key="aboutCategory"
        android:title="@string/other"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_settings"
            android:key="settingsHome"
            android:summary="@string/setting"
            android:title="@string/setting"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_bookmark"
            android:key="bookmark"
            android:summary="@string/all_bookmark"
            android:title="@string/bookmark"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_history"
            android:key="readRecord"
            android:summary="@string/read_record_summary"
            android:title="@string/read_record"
            app:iconSpaceReserved="false" />
    
        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_storage_black_24dp"
            android:key="storageManage"
            android:summary="@string/storage_manage_summary"
            android:title="@string/storage_manage"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_download"
            android:key="downloadManage"
            android:summary="@string/download_manage_summary"
            android:title="@string/download_manage"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_folder_outline"
            android:key="fileManage"
            android:summary="@string/file_manage_summary"
            android:title="@string/file_manage"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_cfg_about"
            android:key="about"
            android:title="@string/about"
            app:iconSpaceReserved="false" />

        <io.legado.app.lib.prefs.Preference
            android:icon="@drawable/ic_exit"
            android:key="exit"
            android:title="@string/exit"
            app:iconSpaceReserved="false" />

    </io.legado.app.lib.prefs.PreferenceCategory>

</androidx.preference.PreferenceScreen>
