<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:divider="@color/transparent"
    app:allowDividerBelow="false">

    <io.legado.app.lib.prefs.Preference
        android:icon="@drawable/ic_cfg_backup"
        android:key="backup_restore"
        android:summary="@string/web_dav_set_import_old"
        android:title="@string/backup_restore"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:icon="@drawable/ic_cfg_theme"
        android:key="theme_setting"
        android:summary="@string/theme_setting_s"
        android:title="@string/theme_setting"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:icon="@drawable/ic_cfg_other"
        android:key="other_setting"
        android:summary="@string/other_setting_s"
        android:title="@string/other_setting"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.SwitchPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_history"
        android:key="enableReadRecord"
        android:summary="@string/read_record_summary"
        android:title="@string/read_record"
        app:iconSpaceReserved="false" />

    <io.legado.app.lib.prefs.Preference
        android:icon="@drawable/ic_link"
        android:key="url_record"
        android:summary="@string/record_url_switch"
        android:title="@string/url_record"
        app:iconSpaceReserved="false" />

</androidx.preference.PreferenceScreen>
