<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:paddingStart="20dp"
    android:paddingTop="18dp"
    android:paddingEnd="20dp"
    android:paddingBottom="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <io.legado.app.ui.widget.text.AccentTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manga_footer_config"
            android:textSize="18sp" />

        <TextView
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/manga_header_chapter"
            android:textColor="@color/primaryText"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <io.legado.app.lib.theme.view.ThemeCheckBox
                    android:id="@+id/cb_chapter_label"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/manga_check_chapter_label" />

                <io.legado.app.lib.theme.view.ThemeCheckBox
                    android:id="@+id/cb_chapter"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/manga_check_chapter" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <io.legado.app.lib.theme.view.ThemeCheckBox
                    android:id="@+id/cb_chapter_name"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/manga_check_chapter_name" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/manga_header_page"
            android:textColor="@color/primaryText"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <io.legado.app.lib.theme.view.ThemeCheckBox
                android:id="@+id/cb_page_number_label"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/manga_check_page_label" />

            <io.legado.app.lib.theme.view.ThemeCheckBox
                android:id="@+id/cb_page_number"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/manga_check_page_number" />
        </LinearLayout>

        <TextView
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/manga_header_progress"
            android:textColor="@color/primaryText"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <io.legado.app.lib.theme.view.ThemeCheckBox
                android:id="@+id/cb_progress_ratio_label"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/manga_check_progress_label" />

            <io.legado.app.lib.theme.view.ThemeCheckBox
                android:id="@+id/cb_progress_ratio"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/manga_check_progress" />
        </LinearLayout>

        <TextView
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/manga_header_footer"
            android:textColor="@color/primaryText"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rg_footer"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <io.legado.app.lib.theme.view.ThemeRadioButton
                    android:id="@+id/rb_show"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/show" />

                <io.legado.app.lib.theme.view.ThemeRadioButton
                    android:id="@+id/rb_hide"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/hide" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/rg_footer_orientation"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <io.legado.app.lib.theme.view.ThemeRadioButton
                    android:id="@+id/rb_left"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/manga_radio_left" />

                <io.legado.app.lib.theme.view.ThemeRadioButton
                    android:id="@+id/rb_center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/manga_radio_center" />
            </RadioGroup>
        </LinearLayout>

        <io.legado.app.lib.theme.view.ThemeCheckBox
            android:id="@+id/cb_battery"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:text="@string/manga_check_battery" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
