<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    
    <item
        android:id="@+id/menu_search_help"
        android:icon="@drawable/ic_search"
        android:title="@string/search_help"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_edit_custom_doc"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit_custom_doc"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_fullscreen_edit"
        android:icon="@drawable/ic_code"
        android:title="@string/edit_content"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />


    <item
        android:id="@+id/menu_close"
        android:title="@string/close"
        app:showAsAction="always"/>
</menu>